tests/typing/fail/multi_assign_tuple2_fail.rb

z = [2,3]

x,y = z

x.foo
y.foo
